--- a/modelformvalidation/templates/core/index.html
+++ b/modelformvalidation/templates/core/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-	<title>{% block title %} Contact Us {% endblock %}</title>
+	<title>{% block title %} Contact US {% endblock %}</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
